[package]
name = "hashable_rc"
version = "0.1.0"
authors = ["Anders Stefan Evensen"]
edition = "2018"
keywords = ["hash", "reference", "rc", "weak", "equality"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
