[package]
name = "hashable_rc"
version = "0.2.0"
authors = ["Anders Evensen"]
edition = "2018"
description = "Hashable wrappers for reference countings."
keywords = ["hash", "reference", "rc", "weak", "equality"]
categories = ["data-structures"]
license = "MIT"
repository = "https://github.com/Anders429/hashable_rc"
readme = "README.md"
